# aptos-light-sdk

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
src/: account.rs  client.rs  config.rs  faucet.rs  lib.rs  rest.rs  transfer.rs  utils.rs
